<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/turquoise">

        <RelativeLayout
            android:layout_width="350dp"
            android:layout_height="30dp"
            android:layout_gravity="center">

            <ImageButton
                android:id="@+id/page_back"
                android:layout_width="21dp"
                android:layout_height="match_parent"
                android:background="@color/turquoise"
                android:contentDescription="@string/arrow_back"
                android:src="@drawable/arrow_circle_left"/>

            <TextView
                android:id="@+id/toolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="30dp"
                android:text="@string/guess_the_animal"
                android:textColor="#FFFFFF"
                android:textSize="22sp"/>
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:contentDescription="@string/party"
        android:src="@drawable/congratulations"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/holy_molly_that_is_right"
        android:layout_marginTop="40dp"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        app:backgroundTint="@null"
        android:background="@drawable/blue_rounded_corner"
        android:text="@string/next"
        android:textSize="20sp"
        android:textColor="@color/white" />

</LinearLayout>