<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/myProfile"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="250dp"
                app:cardBackgroundColor="@color/turquoise">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="250dp"
                    android:layout_gravity="center"
                    app:cardBackgroundColor="@color/turquoise">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/man_technologist"
                        android:scaleType="centerCrop"
                        android:layout_gravity="center"
                        android:contentDescription="@string/your_avatar" />
                </androidx.cardview.widget.CardView>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello_anton"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/are_you_ready_for_learning_today"
                android:textColor="#B6B6B6"
                android:textSize="17sp"
                android:layout_marginBottom="10dp"
                />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/top_users"
        android:textColor="?attr/colorSecondary"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/gray_light">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/man_artist"
                    android:src="@drawable/man_artist"
                    android:layout_centerVertical="true"/>

                <TextView
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:text="@string/vincent_van_gogh"
                    android:layout_marginStart="80dp"
                    android:layout_centerVertical="true"
                    android:textSize="17sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_12_points"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:layout_alignParentEnd="true"
                    android:textSize="17sp"
                    android:textColor="@color/black"
                    />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="70dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/gray_light">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/scientist"
                    android:src="@drawable/man_scientist"
                    android:layout_centerVertical="true"/>

                <TextView
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dmitri_ivanovich_mendeleev"
                    android:layout_marginStart="80dp"
                    android:layout_centerVertical="true"
                    android:textSize="17sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_10_points"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:layout_alignParentEnd="true"
                    android:textSize="17sp"
                    android:textColor="@color/black"
                    />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="140dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/gray_light">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/vampire"
                    android:src="@drawable/vampire"
                    android:layout_centerVertical="true"/>

                <TextView
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:text="@string/vlad_tepes"
                    android:layout_marginStart="80dp"
                    android:layout_centerVertical="true"
                    android:textSize="17sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_8_points"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:layout_alignParentEnd="true"
                    android:textSize="17sp"
                    android:textColor="@color/black"
                    />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/available_excersises"
        android:textSize="20sp"
        android:textColor="?attr/colorSecondary"/>

    <RelativeLayout
        android:layout_width="350dp"
        android:layout_height="265dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">
        <androidx.cardview.widget.CardView
            android:id="@+id/animal_exercise"
            android:layout_width="165dp"
            android:layout_height="125dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/blue"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/polar_bear"
                    android:src="@drawable/polar_bear"/>
                <TextView
                    android:id="@+id/loginMainTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/fredoka_regular_400"
                    android:gravity="center"
                    android:text="@string/guess_the_animal"
                    android:textColor="@color/white"
                    android:textSize="13sp"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/word_practice"
            android:layout_width="165dp"
            android:layout_height="125dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/red"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginTop="5dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/pencil"
                    android:src="@drawable/pencil"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/fredoka_regular_400"
                    android:gravity="center"
                    android:text="@string/word_practice"
                    android:textColor="@color/white"
                    android:textSize="13sp"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/listening"
            android:layout_width="165dp"
            android:layout_height="125dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/orange"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="95dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/speaker"
                    android:src="@drawable/speaker"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/fredoka_regular_400"
                    android:gravity="center"
                    android:text="@string/audition"
                    android:textColor="@color/white"
                    android:textSize="13sp"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="165dp"
            android:layout_height="125dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/turquoise"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="95dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/gamepad"
                    android:src="@drawable/gamepad"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/fredoka_regular_400"
                    android:gravity="center"
                    android:text="@string/game"
                    android:textColor="@color/white"
                    android:textSize="13sp"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</LinearLayout>