<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary">

        <RelativeLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <ImageButton
                android:id="@+id/page_back"
                android:layout_width="21dp"
                android:layout_height="21dp"
                android:background="?attr/colorPrimary"
                android:src="@drawable/arrow_circle_left"
                android:contentDescription="@string/arrow_back" />

            <TextView
                android:id="@+id/toolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginStart="160dp"
                android:layout_gravity="center"
                android:text="@string/signup"
                android:textColor="#FFFFFF"
                android:textSize="17sp" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:fontFamily="@font/fredoka_medium_500"
        android:text="@string/create_an_account"
        android:textColor="?attr/colorSecondary"
        android:textSize="22sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/FirstNameLayout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textColorHint="#65687280">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/FirstNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:background="@drawable/gray_rounded_corner"
            android:fontFamily="@font/fredoka_regular_400"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/LastNameLayout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textColorHint="#65687280">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/LastNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:background="@drawable/gray_rounded_corner"
            android:fontFamily="@font/fredoka_regular_400"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EmailLayout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textColorHint="#65687280">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EmailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:background="@drawable/gray_rounded_corner"
            android:fontFamily="@font/fredoka_regular_400"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/continueButton"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        app:backgroundTint="@null"
        android:background="@drawable/blue_rounded_corner"
        android:text="@string/Continue"
        android:textSize="20sp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/login"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/already_you_member_login"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:fontFamily="@font/fredoka_regular_400"
        android:textSize="17sp"
        android:textColor="@color/gray_dark" />
</LinearLayout>